--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
 asgiref==3.5.0
 Django==4.0.3
 sqlparse==0.4.2
+asgiref==3.5.0
+black==22.1.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.0.4
+Django==4.0.3
+gunicorn==20.1.0
+idna==3.3
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.5.1
+requests==2.27.1
+sqlparse==0.4.2
+tomli==2.0.1
+urllib3==1.26.8
