--- a/requirements.txt
+++ b/requirements.txt
@@ -57,3 +57,32 @@ tomli==2.0.1
 urllib3==1.26.8
 whitenoise==6.0.0
 yarl==1.7.2
+aiohttp==3.8.1
+aiosignal==1.2.0
+asgiref==3.5.0
+async-timeout==4.0.2
+attrs==21.4.0
+black==22.1.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==8.0.4
+Django==4.0.3
+frozenlist==1.3.0
+geoip2==4.5.0
+gunicorn==20.1.0
+idna==3.3
+maxminddb==2.2.0
+multidict==6.0.2
+mypy==0.960
+mypy-extensions==0.4.3
+pathspec==0.9.0
+platformdirs==2.5.1
+requests==2.27.1
+sqlparse==0.4.2
+tomli==2.0.1
+typing_extensions==4.2.0
+ua-parser==0.10.0
+urllib3==1.26.8
+user-agents==2.2.0
+whitenoise==6.0.0
+yarl==1.7.2
