--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ charset-normalizer==2.0.12
 click==8.0.4
 Django==4.0.3
 frozenlist==1.3.0
+geographiclib==1.52
 geoip2==4.5.0
+geopy==2.2.0
 gunicorn==20.1.0
 idna==3.3
 maxminddb==2.2.0
