--- a/requirements.txt
+++ b/requirements.txt
@@ -7,23 +7,39 @@ black==22.1.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.0.4
+dataclasses-json==0.5.7
+dateparser==1.1.8
 Django==4.0.3
 frozenlist==1.3.0
+future==0.18.3
 geographiclib==1.52
 geoip2==4.5.0
 geopy==2.2.0
 gunicorn==20.1.0
 idna==3.3
+marshmallow==3.19.0
+marshmallow-enum==1.5.1
 maxminddb==2.2.0
 multidict==6.0.2
 mypy==0.960
 mypy-extensions==0.4.3
+packaging==23.1
 pathspec==0.9.0
 platformdirs==2.5.1
+pyparsing==3.0.9
+python-dateutil==2.8.2
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+regex==2023.5.5
 requests==2.27.1
+sh==2.0.3
+six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
+typing-inspect==0.8.0
 typing_extensions==4.2.0
+tzdata==2023.3
+tzlocal==4.3
 ua-parser==0.10.0
 urllib3==1.26.8
 user-agents==2.2.0
