--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ click==8.0.4
 dataclasses-json==0.5.7
 dateparser==1.1.8
 Django==4.0.3
+file-read-backwards==3.0.0
 frozenlist==1.3.0
 future==0.18.3
 geographiclib==1.52
