--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ future==0.18.3
 geographiclib==1.52
 geoip2==4.5.0
 geopy==2.2.0
+gevent==22.10.2
+greenlet==2.0.2
 gunicorn==20.1.0
 idna==3.3
 marshmallow==3.19.0
@@ -46,3 +48,5 @@ urllib3==1.26.8
 user-agents==2.2.0
 whitenoise==6.0.0
 yarl==1.7.2
+zope.event==4.6
+zope.interface==6.0
