--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@ aiosignal==1.2.0
 asgiref==3.5.0
 async-timeout==4.0.2
 attrs==21.4.0
-black==22.1.0
 certifi==2021.10.8
+cffi==1.16.0
 charset-normalizer==2.0.12
 click==8.0.4
+colorama==0.4.6
 dataclasses-json==0.5.7
 dateparser==1.1.8
 Django==4.0.3
@@ -24,11 +25,11 @@ marshmallow==3.19.0
 marshmallow-enum==1.5.1
 maxminddb==2.2.0
 multidict==6.0.2
-mypy==0.960
 mypy-extensions==0.4.3
 packaging==23.1
 pathspec==0.9.0
 platformdirs==2.5.1
+pycparser==2.21
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
