--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiosignal==1.2.0
 asgiref==3.5.0
 async-timeout==4.0.2
 attrs==21.4.0
+cachetools==5.3.2
 certifi==2021.10.8
 cffi==1.16.0
 charset-normalizer==2.0.12
@@ -40,6 +41,7 @@ sh==2.0.3
 six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
+types-cachetools==5.3.0.7
 typing-inspect==0.8.0
 typing_extensions==4.2.0
 tzdata==2023.3
