--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
 [project]
 name = "ip"
 version = "0.1.0"
-description = "考拉IP归属地，可查询用户IP地址及归属地, 及设备型号、操作系统及浏览器版本。"
+description = "https://github.com/jackjyq/ip"
 authors = [
     { name = "Jack Jiang", email = "jackjyq@outlook.com" }
 ]
-repository = "https://github.com/jackjyq/ip"
 dependencies = [
     "django>=5.0.3",
     "geoip2>=4.8.0",
@@ -39,3 +38,8 @@ packages = ["src/ip"]
 [tool.rye.scripts]
 dev = { cmd = "python ./src/ip/main.py runserver", env = { DEBUG="True" } }
 prod = { cmd = "gunicorn --workers 3 --worker-class=gevent src.ip.main" }
+geolite2 = { cmd = "bash -c ./src/ip/update_geolite2.sh"}
+ip2region = { cmd = "python ./src/ip/update_ip2region.py"}
+
+[tool.ruff]
+exclude = ["./src/ip/xdbSearcher.py"]
